# crop-classification-pipeline

./: .dockerignore  .gitignore  AGENTS.md  main.py  pyproject.toml
.github/workflows/: build-push-ecr.yml
infra/: .terraform.lock.hcl  budgets-module.tf  ecr-module.tf  ecs-gold-task.tf  ecs-module.tf  ecs-silver-task.tf  feature-store-module.tf  github-oidc-module.tf  iam-module.tf  lambda-module.tf  outputs.tf  provider.tf  s3-module.tf  sagemaker-processing-locals.tf  ssm-module.tf  step-function.tf  variables.tf
infra/budgets/: main.tf  variables.tf
infra/feature-store/: main.tf  variables.tf
infra/iam/: ecs-task-execution-role.tf  fargate-image-copy-role.tf  gold-fargate-role.tf  lambda-polygon-crawl-role.tf  outputs.tf  policies.tf  sagemaker-processing-gold-role.tf  sagemaker-processing-silver-role.tf  silver-fargate-role.tf  step-functions-role.tf  variables.tf
infra/lambda/: outputs.tf  variables.tf
infra/modules/ecr/: main.tf  variables.tf
infra/modules/ecs-fargate/: main.tf  outputs.tf  variables.tf
infra/modules/feature-store/: main.tf  outputs.tf
infra/modules/github-oidc/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf
infra/modules/s3/: main.tf  variables.tf
infra/modules/ssm/: main.tf  outputs.tf  variables.tf
infra/s3/: variables.tf
infra/scripts/: git_commit.sh
scripts/: launch_gold.py
src/lambdas/crawl_polygons/: client.py  lambda_handler.py  municipalities.py  requirements.txt
src/lambdas/crawl_polygons/endpoints/: crawl_polygons.py  list_municipalities.py
src/processing/: Dockerfile  pyproject.toml
src/processing/processing/bronze/: config.py  download.py  io.py  main.py  sidecar.py
src/processing/processing/gold/: config.py  io.py  main.py  preprocessor.py  sidecar.py  stats.py
src/processing/processing/silver/: __init__.py  clean.py  config.py  indexes.py  io.py  main.py  masks.py  parcel.py  phenolopy.py  phenometrics.py  preprocessor.py  season.py  sidecar.py  split.py
src/training/: pyproject.toml
workflows/: data-pipeline.asl.json
