[project]
name = "crop-classification-pipeline"
version = "0.1.0"
description = "ML pipeline for crop classification on AWS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["src/processing", "src/training"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
