[project]
name = "processing"
version = "0.1.0"
description = "Data processing for crop classification pipeline"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "geopandas",
    "odc-stac",
    "psutil",
    "pystac-client",
    "s3fs",
    "xarray",
]

[tool.hatch.build.targets.wheel]
packages = ["processing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"