[project]
name = "processing"
version = "0.1.0"
description = "Data processing for crop classification pipeline"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "botocore[crt]>=1.42.89",
    "geopandas",
    "odc-stac",
    "psutil",
    "pystac-client",
    "s3fs",
    "tqdm",
    "xarray",
    "zarr",
]

[tool.hatch.build.targets.wheel]
packages = ["processing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
